Started second page

--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -1,1 +1,74 @@
 <!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Why HTML?</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <table class="nav-table">
+            <tr>
+                <td>
+                    <img class="logo" src="Images/logo.png" alt="reidcon logo">
+                </td>
+                <td>
+                    <div class="navbar">
+                        <div class="nav-1">
+                            <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+                        </div>
+                        <div class="nav-2">
+                            <a href="index.html" class="home"><b>HOME</b></a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </header>
+    <img src="Images/app.png" alt="App">
+    <h1>WHY HTML?</h1>
+    <p>
+        <hr>
+        <b>HTML</b> (Following Paragraph is Left Aligned)
+        <hr>
+        <br>
+        HTML is responsible of giving a semantic meaning for your content.
+        <br>
+        For example:
+    <ol>
+        <li>Here is &lt;h5&gt; <b>title</b> &lt;/h5&gt;</li>
+        <li>Followed by a &lt;p&gt; paragraph &lt;/p&gt;</li>
+        <li>Then there's a footer [etc].</li>
+    </ol>
+    Web browsers read it to display your content according to their importance (a title is bigger than a text, a
+    &lt;strong&gt; <b>"strong"</b> &lt;/strong&gt; text is more important than a single text, etc). &lt;tt&gt; <tt>Crawlers</tt> 
+    &lt;/tt&gt; (like robots) use it to identify what content is relevant to their activity (i.e. google needs your page
+    title to show it on his page).
+    <br>
+    <hr>
+    CSS (Following Paragraph is Justified)
+    <hr>
+    </p>
+
+    <form action="">
+        <caption>Sample Form</caption>
+        <br>
+        <label for="name">Name:</label><input type="text" name="Name:" id="name">
+        <br>
+        <label for="eMail">Email:</label><input type="email" name="eMail" id="eMail">
+        <br>
+        <label for="gender">Gender:</label>
+        <input type="radio" name="gender" value="male">
+        <label for="gender">Male</label>
+        <input type="radio" name="gender" value="female">
+        <label for="gender">Female</label>
+        <br>
+        <label for="year">Academic Year</label>
+        <select name="year" id="">
+            
+        </select>
+    </form>
+</body>
