--- a/task01/index.html
+++ b/task01/index.html
@@ -1,124 +1,137 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Task01</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body class="Roboto-font">
-    <header>
-      <table class="nav-table">
-        <tr>
-          <td>
-            <img class="logo" src="Images/logo.png" alt="reidcon logo">
-          </td>
-          <td>
-            <div class="navbar">
-              <div class="nav-1">
-                <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
-              </div>
-              <div class="nav-2">
-                <a href="index.html" class="home"><b>HOME</b></a>
-              </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Task01</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body class="Roboto-font">
+  <header>
+    <table class="nav-table">
+      <tr>
+        <td>
+          <img class="logo" src="Images/logo.png" alt="reidcon logo">
+        </td>
+        <td>
+          <div class="navbar">
+            <div class="nav-1">
+              <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+            </div>
+            <div class="nav-2">
+              <a href="index.html" class="home"><b>HOME</b></a>
+            </div>
           </div>
         </td>
+      </tr>
+    </table>
+  </header>
+  <main>
+    <section class="intro">
+      <table>
+        <tr>
+          <td>
+            <div class="p-div">
+              <p>
+                <span class="home-h">HOME</span>
+                <br>
+                <br>
+                HTML markup consists of several key components, including those called tags (and their attributes),
+                character-based data types, character refernce and entity refernces. HTML tags most commonly come in
+                pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span
+                  class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
+                recondesent empty elements and so are unpaired, for example <span
+                  class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
+                first tag in such a pair is the start tag, and the second is the end tag (they are also called
+                <i>opening tags</i> and <i>closing tags</i>).
+                <br>
+                <a href="whyhtml.html"><button type="button" class="wh-button"><strong>Why HTML?</strong></button></a>
+              </p>
+            </div>
+          </td>
+          <td>
+            <img src="Images/hero.jpg" alt="hero" class="hero" />
+          </td>
         </tr>
       </table>
-    </header>
-    <main>
-      <section class="intro">
-        <table>
-          <tr>
-            <td>
-              <div class="p-div">
-                <p>
-                  <span class="home-h">HOME</span>
-                  <br>
-                  <br>
-                  HTML markup consists of several key components, including those called tags (and their attributes), character-based data types, character refernce and entity refernces. HTML tags most commonly come in pairs like <span class="tags">&lt;h1&gt;</span>  and <span class="tags">&lt;/h1&gt</span>, although some recondesent empty elements and  so are unpaired, for example <span class="tags">&ltimg&gt</span>. The first tag in such a pair  is the start tag, and the second is the end tag (they are also called <i>opening tags</i> and <i>closing tags</i>).
-                  <br>
-                  <button type="button" class="wh-button"><strong>Why HTML?</strong></button>
-                </p>
-              </div>
-            </td>
-            <td>
-              <img src="Images/hero.jpg" alt="hero" class="hero"/>
-            </td>
-          </tr>
-        </table>
-      </section>
+    </section>
+    <br>
+    <section class="table">
       <br>
-        <section class="table">
-          <br>
-          <br>
-          <table  align="center" class="timetable">
-            <caption>
-              <div>
-                <p>
-                  <div class="sample-table">
-                    Sample Table
-                  </div>
-                    <div class="t-description">
-                      Following table uses <span class="tags consolata-font">colspan</span> and <span class="tags consolata-font">rowspan</span> attributes inside <span class="tags"><b>&lt;td&gt;</b></span> to merge two or more cells
-                    </div>
-                    <br>
-                </p>
-              </div>
-            </caption>
-            <tr>
-              <th class="th-1"></th>
-              <th class="th-2" align="left"> First Year</th>
-              <th class="th-3" align=left> Second Year</th>
-              <th class="th-4" align=left> Third Year</th>
-              <th class="th-5" align=left> Fourth Year</th>
-            </tr>
-            <tr class="tr-1 row">
-              <td class="t-data">8.00 a.m - 10.00 a.m</td>
-              <td class="t-data">Data Structures & Algorithms</td>
-              <td class="t-data">Software Engineering</td>
-              <td class="t-data">Mobile Application Development</td>
-              <td class="t-data">Parallel Computing</td>
-            </tr>
-            <tr class="tr-2 row">
-              <td class="t-data">10.00 a.m - 12.00 a.m</td>
-              <td class="t-data">Database</td>
-              <td class="t-data">Functional Programming</td>
-              <td class="t-data">Machine Learning</td>
-              <td class="t-data">Computational Biology</td>
-            </tr>
-            <tr class="tr-3 row">
-              <td class="t-data"><b>12.00 a.m - 1.00 p.m</b></td>
-              <td colspan="4">
-                <div class="interval">
-                  <b>Interval</b>
-                </div>
-            </td>
-            </tr>
-            <tr class="tr-4 row">
-              <td class="t-data">1.00 p.m - 3.00 p.m</td>
-              <td class="t-data">Mathematics</td>
-              <td rowspan="2" class="t-data-l">
-                Group Project
-                <ul>
-                  <li>Previous Progress</li>
-                  <li>Plan for next week</li>
-                </ul>
-            </td>
-              <td class="t-data">Game Development</td>
-              <td class="t-data">Cognitive Robotics</td>
-            </tr>
-            <tr class="tr-5 row">
-              <td class="t-data">3.00 p.m - 5.00 p.m</td>
-              <td class="t-data">Programming Using C</td>
-              <td class="t-data">Management</td>
-              <td class="t-data">Philosophy of Science</td>
-            </tr>
-          </table>
+      <br>
+      <table align="center" class="timetable">
+        <caption>
+          <div>
+            <p>
+            <div class="sample-table">
+              Sample Table
+            </div>
+            <div class="t-description">
+              Following table uses <span class="tags"><tt>colspan</tt></span> and <span
+                class="tags"><tt>rowspan</tt></span> attributes inside <span
+                class="tags"><b><tt>&lt;td&gt;</tt></b></span> to
+              merge two or more cells
+            </div>
+            <br>
+            </p>
+          </div>
+        </caption>
+        <tr>
+          <th class="th-1"></th>
+          <th class="th-2" align="left"> First Year</th>
+          <th class="th-3" align=left> Second Year</th>
+          <th class="th-4" align=left> Third Year</th>
+          <th class="th-5" align=left> Fourth Year</th>
+        </tr>
+        <tr class="tr-1 row">
+          <td class="t-data">8.00 a.m - 10.00 a.m</td>
+          <td class="t-data">Data Structures & Algorithms</td>
+          <td class="t-data">Software Engineering</td>
+          <td class="t-data">Mobile Application Development</td>
+          <td class="t-data">Parallel Computing</td>
+        </tr>
+        <tr class="tr-2 row">
+          <td class="t-data">10.00 a.m - 12.00 a.m</td>
+          <td class="t-data">Database</td>
+          <td class="t-data">Functional Programming</td>
+          <td class="t-data">Machine Learning</td>
+          <td class="t-data">Computational Biology</td>
+        </tr>
+        <tr class="tr-3 row">
+          <td class="t-data"><b>12.00 a.m - 1.00 p.m</b></td>
+          <td colspan="4">
+            <div class="interval">
+              <b>Interval</b>
+            </div>
+          </td>
+        </tr>
+        <tr class="tr-4 row">
+          <td class="t-data">1.00 p.m - 3.00 p.m</td>
+          <td class="t-data">Mathematics</td>
+          <td rowspan="2" class="t-data-l">
+            Group Project
+            <ul>
+              <li>Previous Progress</li>
+              <li>Plan for next week</li>
+            </ul>
+          </td>
+          <td class="t-data">Game Development</td>
+          <td class="t-data">Cognitive Robotics</td>
+        </tr>
+        <tr class="tr-5 row">
+          <td class="t-data">3.00 p.m - 5.00 p.m</td>
+          <td class="t-data">Programming Using C</td>
+          <td class="t-data">Management</td>
+          <td class="t-data">Philosophy of Science</td>
+        </tr>
+      </table>
       </div>
-      </section>
-    </main>
-    <footer></footer>
-  </body>
+    </section>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
