--- a/task01/index.html
+++ b/task01/index.html
@@ -11,21 +11,25 @@
 
 <body class="Roboto-font">
   <header>
+    <br>
+    <br>
     <table class="nav-table">
       <tr>
-        <td>
-          <img class="logo" src="Images/logo.png" alt="reidcon logo">
-        </td>
-        <td>
-          <div class="navbar">
-            <div class="nav-1">
-              <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+        <div>
+          <td>
+            <img class="logo" src="Images/logo.png" alt="reidcon logo">
+          </td>
+          <td>
+            <div class="navbar">
+              <div class="nav-1">
+                <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+              </div>
+              <div class="nav-2">
+                <a href="index.html" class="home"><b>HOME</b></a>
+              </div>
             </div>
-            <div class="nav-2">
-              <a href="index.html" class="home"><b>HOME</b></a>
-            </div>
-          </div>
-        </td>
+          </td>
+        </div>
       </tr>
     </table>
   </header>
