--- a/task01/index.html
+++ b/task01/index.html
@@ -76,7 +76,7 @@
             <div class="t-description">
               Following table uses <span class="tags"><tt>colspan</tt></span> and <span
                 class="tags"><tt>rowspan</tt></span> attributes inside <span
-                class="tags"><b><tt>&lt;td&gt;</tt></b></span> to
+                class="tags"><tt>&lt;td&gt;</tt></span> to
               merge two or more cells
             </div>
             <br>
