--- a/task01/index.html
+++ b/task01/index.html
@@ -35,7 +35,7 @@
   </header>
   <main>
     <section class="intro">
-      <table>
+      <table align="center">
         <tr>
           <td>
             <div class="p-div">
@@ -43,14 +43,12 @@
                 <span class="home-h">HOME</span>
                 <br>
                 <br>
-                HTML markup consists of several key components, including those called tags (and their attributes),
-                character-based data types, character refernce and entity refernces. HTML tags most commonly come in
-                pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span
-                  class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
-                recondesent empty elements and so are unpaired, for example <span
-                  class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
-                first tag in such a pair is the start tag, and the second is the end tag (they are also called
-                <i>opening tags</i> and <i>closing tags</i>).
+                  HTML markup consists of several key components, including those called tags (and their attributes),
+                  character-based data types, character refernce and entity refernces. HTML tags most commonly come in
+                  pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
+                  recondesent empty elements and so are unpaired, for example <span class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
+                  first tag in such a pair is the start tag, and the second is the end tag (they are also called
+                  <i>opening tags</i> and <i>closing tags</i>).
                 <br>
                 <a href="whyhtml.html"><button type="button" class="wh-button"><strong>Why HTML?</strong></button></a>
               </p>
@@ -74,9 +72,7 @@
               Sample Table
             </div>
             <div class="t-description">
-              Following table uses <span class="tags"><tt>colspan</tt></span> and <span
-                class="tags"><tt>rowspan</tt></span> attributes inside <span
-                class="tags"><tt>&lt;td&gt;</tt></span> to
+              Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span> attributes inside <span class="tags"><tt>&lt;td&gt;</tt></span> to
               merge two or more cells
             </div>
             <br>
