--- a/task01/index.html
+++ b/task01/index.html
@@ -11,44 +11,42 @@
 
 <body class="Roboto-font">
   <header>
-    <br>
-    <br>
-    <table class="nav-table">
-      <tr>
-        <div>
-          <td>
-            <img class="logo" src="Images/logo.png" alt="reidcon logo">
-          </td>
-          <td>
-            <div class="navbar">
-              <div class="nav-1">
-                <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
-              </div>
-              <div class="nav-2">
-                <a href="index.html" class="home"><b>HOME</b></a>
-              </div>
-            </div>
-          </td>
-        </div>
-      </tr>
-    </table>
+    <div>
+      <img class="logo" src="Images/logo.png" alt="reidcon logo">
+      <div class="navbar">
+        <ul class="nav-list">
+          <div class="nav-1">
+            <li>
+              <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+            </li>
+          </div>
+          <div class="nav-2">
+            <li>
+              <a href="index.html" class="home"><b>HOME</b></a>
+            </li>
+          </div>
+        </ul>
+      </div>
+    </div>
   </header>
   <main>
+    <br>
+    <br>
     <section class="intro">
       <table align="center">
         <tr>
           <td>
-            <div class="p-div">
+            <div class="home-p">
               <p>
                 <span class="home-h">HOME</span>
                 <br>
                 <br>
-                  HTML markup consists of several key components, including those called tags (and their attributes),
-                  character-based data types, character refernce and entity refernces. HTML tags most commonly come in
-                  pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
-                  recondesent empty elements and so are unpaired, for example <span class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
-                  first tag in such a pair is the start tag, and the second is the end tag (they are also called
-                  <i>opening tags</i> and <i>closing tags</i>).
+                HTML markup consists of several key components, including those called tags (and their attributes),
+                character-based data types, character refernce and entity refernces. HTML tags most commonly come in
+                pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
+                recondesent empty elements and so are unpaired, for example <span class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
+                first tag in such a pair is the start tag, and the second is the end tag (they are also called
+                <i>opening tags</i> and <i>closing tags</i>).
                 <br>
                 <a href="whyhtml.html"><button type="button" class="wh-button"><strong>Why HTML?</strong></button></a>
               </p>
@@ -72,7 +70,7 @@
               Sample Table
             </div>
             <div class="t-description">
-              Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span> attributes inside <span class="tags"><tt>&lt;td&gt;</tt></span> to
+              Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span> attributes inside <span class="tags"><tt>&lt;<b>td</b>&gt;</tt></span> to
               merge two or more cells
             </div>
             <br>
