--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -10,29 +10,27 @@
 
 <body class="Roboto-font">
   <header>
-    <table class="nav-table">
-      <tr>
-        <div>
-          <td>
-            <img class="logo" src="Images/logo.png" alt="reidcon logo">
-          </td>
-          <td>
-            <div class="navbar">
-              <div class="nav-1">
-                <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
-              </div>
-              <div class="nav-2">
-                <a href="index.html" class="home"><b>HOME</b></a>
-              </div>
-            </div>
-          </td>
-        </div>
-      </tr>
-    </table>
+    <div>
+      <img class="logo" src="Images/logo.png" alt="reidcon logo">
+      <div class="navbar">
+        <ul class="nav-list">
+          <div class="nav-1">
+            <li>
+              <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+            </li>
+          </div>
+          <div class="nav-2">
+            <li>
+              <a href="index.html" class="home"><b>HOME</b></a>
+            </li>
+          </div>
+        </ul>
+      </div>
+    </div>
   </header>
   <div style="height:60px">
   </div>
-  <section>
+  <section class="why-html?">
     <table>
       <tr>
         <td>
@@ -50,12 +48,12 @@
               <br>
               For example:
             <ol>
-              <li>Here is <span class="tags">&lt;h5&gt;</span> <b>title</b> <span class="tags">&lt;/h5&gt;</span></li>
+              <li>Here is <span class="tags">&lt;h5&gt;</span><span><b>title</b></span><span class="tags">&lt;/h5&gt;</span></li>
               <li>Followed by a <span class="tags">&lt;p&gt;</span> paragraph <span class="tags">&lt;/p&gt;</span></li>
               <li>Then there's a footer [etc].</li>
             </ol>
             Web browsers read it to display your content according to their importance (a title is bigger than a text, a
-            <span class="tags">&lt;strong&gt;</span> <b>"strong"</b> <span class="tags">&lt;/strong&gt;</span> text is more important than a single text, etc). &lt;tt&gt; <tt>Crawlers</tt>
+            <span class="tags">&lt;strong&gt;</span> <strong>"strong"</strong> <span class="tags">&lt;/strong&gt;</span> text is more important than a single text, etc). &lt;tt&gt; <tt>Crawlers</tt>
             &lt;/tt&gt; (like robots) use it to identify what content is relevant to their activity (i.e. google needs your page
             title to show it on his page).
             </p>
@@ -63,17 +61,18 @@
             CSS (Following Paragraph is Justified)
             <hr>
             <p class="p-css">
-              CSS gives a style to your application. It's fundamentally destined to the user. It allows to say <span class="p-red">"This text is red"</span>, <span class="p-block">"this block is 200px wide"</span> , etc. it's "basically" not used by crawlers
+              CSS gives a style to your application. It's fundamentally destined to the user. It allows to say <span class="p-red">"This text is red"</span>, <span class="p-block tags">"this block is 200px wide"</span> , etc. it's "basically" not
+              used by crawlers
               but
               it has some importance (some robot avoid to render a text if it's hidden for example)
             </p>
             <p class="p-js">
               <hr>
               <tt>Javascript</tt> (Following Paragraph is Right Aligned)
+            <div class="js">
               <hr>
-              <div class="js">
-                Javascript which is the only Programming language of these 3, allows to perform actions in real time (like showing a dialog when the user click a button).
-              </div>
+              Javascript which is the only Programming language of these 3, allows to perform actions in real time (like showing a dialog when the user click a button).
+            </div>
             </p>
             </p>
           </div>
@@ -84,41 +83,47 @@
   <section>
     <form action="" class="form">
       <div class="form-caption">
-        <h2>Sample Form</h2>
+        Sample Form
       </div>
       <br>
       <label for="name">Name:</label>
-      <input type="text" name="Name:" id="name" placeholder="Name">
+      <input type="text" name="Name:" id="name" placeholder="Name" active>
       <br>
       <br>
       <label for="eMail">Email:</label>
-      <input type="email" name="eMail" id="eMail" placeholder="Email Address">
+      <input type="email" name="eMail" id="eMail" placeholder="Email Address" active>
       <br>
       <br>
       <label for="gender">Gender:</label>
-      <input type="radio" name="gender" value="male" id="rd-1">
-      <label for="gender"><span class="rd-text">Male</span></label>
-      <input type="radio" name="gender" value="female" id="rd-2">
-      <label for="gender"><span class="rd-text">Female</span></label>
+      <span class="rd">
+        <input type="radio" name="gender" value="male" id="rd-1">
+        <label for="gender"><span class="rd-text">Male</span></label>
+        <input type="radio" name="gender" value="female" id="rd-2">
+        <label for="gender"><span class="rd-text">Female</span></label>
+      </span>
       <br>
       <br>
       <label for="year">Academic Year:</label>
       <select name="year" id="year" required>
-        <option selected value="1" class="slct-0" disabled>Select from list</option>
-        <option value="1" class="slct-1">1</option>
-        <option value="2" class="slct-2">2</option>
-        <option value="3" class="slct-3">3</option>
-        <option value="4" class="slct-4">4</option>
+        <span class="slct">
+          <option selected value="1" class="slct-0" disabled>Select from list</option>
+          <option value="1" class="slct-1">1</option>
+          <option value="2" class="slct-2">2</option>
+          <option value="3" class="slct-3">3</option>
+          <option value="4" class="slct-4">4</option>
+        </span>
       </select>
       <br>
       <br>
       <label for="language">Familier in:</label>
-      <input type="checkbox" name="lanugage" value="HTML" id="ch-1">
-      <label for="HTML"><span class="ch-text">HTML</span></label>
-      <input type="checkbox" name="lanugage" value="CSS" id="ch-2">
-      <label for="CSS"><span class="ch-text">CSS</span></label>
-      <input type="checkbox" name="language" value="JS" id="ch-3">
-      <label for="JS"><span class="ch-text">JS</span></label>
+      <span class="ch">
+        <input type="checkbox" name="lanugage" value="HTML" id="ch-1">
+        <label for="HTML"><span class="ch-text">HTML</span></label>
+        <input type="checkbox" name="lanugage" value="CSS" id="ch-2" che>
+        <label for="CSS"><span class="ch-text">CSS</span></label>
+        <input type="checkbox" name="language" value="JS" id="ch-3">
+        <label for="JS"><span class="ch-text">JS</span></label>
+      </span>
       <br>
       <br>
       <div class="tetxarea">
