Made first page resizable

--- a/task01/index.html
+++ b/task01/index.html
@@ -29,107 +29,105 @@
       </div>
     </div>
   </header>
-  <main>
-    <br>
-    <br>
-    <section class="intro">
-      <table align="center">
-        <tr>
-          <td>
-            <div class="home-p">
-              <p>
-                <span class="home-h">HOME</span>
-                <br>
-                <br>
-                HTML markup consists of several key components, including those called tags (and their attributes),
-                character-based data types, character refernce and entity refernces. HTML tags most commonly come in
-                pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
-                recondesent empty elements and so are unpaired, for example <span class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
-                first tag in such a pair is the start tag, and the second is the end tag (they are also called
-                <i>opening tags</i> and <i>closing tags</i>).
-                <br>
-                <a href="whyhtml.html"><button type="button" class="wh-button"><strong>Why HTML?</strong></button></a>
-              </p>
-            </div>
-          </td>
-          <td>
-            <img src="Images/hero.jpg" alt="hero" class="hero" />
-          </td>
-        </tr>
-      </table>
-    </section>
-    <br>
-    <section class="table">
-      <br>
-      <br>
-      <table align="center" class="timetable">
-        <caption>
-          <div>
+  <section class="intro">
+    <table>
+      <tr>
+        <td>
+          <div class="home-p">
             <p>
-            <div class="sample-table">
-              Sample Table
-            </div>
-            <div class="t-description">
-              Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span> attributes inside <span class="tags"><tt>&lt;<b>td</b>&gt;</tt></span> to
-              merge two or more cells
-            </div>
-            <br>
+              <span class="home-h">HOME</span>
+              <br>
+              <br>
+              HTML markup consists of several key components, including those called tags (and their attributes),
+              character-based data types, character refernce and entity refernces. HTML tags most commonly come in
+              pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span
+                class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
+              recondesent empty elements and so are unpaired, for example <span
+                class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
+              first tag in such a pair is the start tag, and the second is the end tag (they are also called
+              <i>opening tags</i> and <i>closing tags</i>).
+              <br>
+              <a href="whyhtml.html"><button type="button" class="wh-button"><strong>Why HTML?</strong></button></a>
             </p>
           </div>
-        </caption>
-        <tr>
-          <th class="th-1"></th>
-          <th class="th-2" align="left"> First Year</th>
-          <th class="th-3" align=left> Second Year</th>
-          <th class="th-4" align=left> Third Year</th>
-          <th class="th-5" align=left> Fourth Year</th>
-        </tr>
-        <tr class="tr-1 row">
-          <td class="t-data">8.00 a.m - 10.00 a.m</td>
-          <td class="t-data">Data Structures & Algorithms</td>
-          <td class="t-data">Software Engineering</td>
-          <td class="t-data">Mobile Application Development</td>
-          <td class="t-data">Parallel Computing</td>
-        </tr>
-        <tr class="tr-2 row">
-          <td class="t-data">10.00 a.m - 12.00 a.m</td>
-          <td class="t-data">Database</td>
-          <td class="t-data">Functional Programming</td>
-          <td class="t-data">Machine Learning</td>
-          <td class="t-data">Computational Biology</td>
-        </tr>
-        <tr class="tr-3 row">
-          <td class="t-data"><b>12.00 a.m - 1.00 p.m</b></td>
-          <td colspan="4">
-            <div class="interval">
-              <b>Interval</b>
-            </div>
-          </td>
-        </tr>
-        <tr class="tr-4 row">
-          <td class="t-data">1.00 p.m - 3.00 p.m</td>
-          <td class="t-data">Mathematics</td>
-          <td rowspan="2" class="t-data-l">
-            Group Project
-            <ul>
-              <li>Previous Progress</li>
-              <li>Plan for next week</li>
-            </ul>
-          </td>
-          <td class="t-data">Game Development</td>
-          <td class="t-data">Cognitive Robotics</td>
-        </tr>
-        <tr class="tr-5 row">
-          <td class="t-data">3.00 p.m - 5.00 p.m</td>
-          <td class="t-data">Programming Using C</td>
-          <td class="t-data">Management</td>
-          <td class="t-data">Philosophy of Science</td>
-        </tr>
-      </table>
-      </div>
-    </section>
-  </main>
-  <footer></footer>
+        </td>
+        <td>
+          <img src="Images/hero.jpg" alt="hero" class="hero" />
+        </td>
+      </tr>
+    </table>
+  </section>
+  <section class="table">
+    <br>
+    <br>
+    <table align="center" class="timetable">
+      <caption>
+        <div>
+          <p>
+          <div class="sample-table">
+            Sample Table
+          </div>
+          <div class="t-description">
+            Following table uses <span class="tags"><tt>colspan</tt></span> and <span
+              class="tags"><tt>rowspan</tt></span> attributes inside <span
+              class="tags"><tt>&lt;<b>td</b>&gt;</tt></span> to
+            merge two or more cells
+          </div>
+          <br>
+          </p>
+        </div>
+      </caption>
+      <tr>
+        <th class="th-1"></th>
+        <th class="th-2" align="left"> First Year</th>
+        <th class="th-3" align=left> Second Year</th>
+        <th class="th-4" align=left> Third Year</th>
+        <th class="th-5" align=left> Fourth Year</th>
+      </tr>
+      <tr class="tr-1 row">
+        <td class="t-data">8.00 a.m - 10.00 a.m</td>
+        <td class="t-data">Data Structures & Algorithms</td>
+        <td class="t-data">Software Engineering</td>
+        <td class="t-data">Mobile Application Development</td>
+        <td class="t-data">Parallel Computing</td>
+      </tr>
+      <tr class="tr-2 row">
+        <td class="t-data">10.00 a.m - 12.00 a.m</td>
+        <td class="t-data">Database</td>
+        <td class="t-data">Functional Programming</td>
+        <td class="t-data">Machine Learning</td>
+        <td class="t-data">Computational Biology</td>
+      </tr>
+      <tr class="tr-3 row">
+        <td class="t-data"><b>12.00 a.m - 1.00 p.m</b></td>
+        <td colspan="4">
+          <div class="interval">
+            <b>Interval</b>
+          </div>
+        </td>
+      </tr>
+      <tr class="tr-4 row">
+        <td class="t-data">1.00 p.m - 3.00 p.m</td>
+        <td class="t-data">Mathematics</td>
+        <td rowspan="2" class="t-data-l">
+          Group Project
+          <ul>
+            <li>Previous Progress</li>
+            <li>Plan for next week</li>
+          </ul>
+        </td>
+        <td class="t-data">Game Development</td>
+        <td class="t-data">Cognitive Robotics</td>
+      </tr>
+      <tr class="tr-5 row">
+        <td class="t-data">3.00 p.m - 5.00 p.m</td>
+        <td class="t-data">Programming Using C</td>
+        <td class="t-data">Management</td>
+        <td class="t-data">Philosophy of Science</td>
+      </tr>
+    </table>
+    </div>
+  </section>
 </body>
 
 </html>
