did some animations
+ linked reidcon logo to their fb page

--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -11,7 +11,7 @@
 <body class="Roboto-font">
   <header>
     <div>
-      <img class="logo" src="Images/logo.png" alt="reidcon logo">
+      <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png" alt="reidcon logo"></a>
       <div class="navbar">
         <ul class="nav-list">
           <div class="nav-1">
