--- a/task01/index.html
+++ b/task01/index.html
@@ -12,7 +12,7 @@
 <body class="Roboto-font">
   <header>
     <div>
-      <img class="logo" src="Images/logo.png" alt="reidcon logo">
+      <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png" alt="reidcon logo"></a>
       <div class="navbar">
         <ul class="nav-list">
           <div class="nav-1">
