--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -11,7 +11,8 @@
 <body class="Roboto-font">
   <header>
     <div>
-      <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png" alt="reidcon logo"></a>
+      <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png"
+          alt="reidcon logo"></a>
       <div class="navbar">
         <ul class="nav-list">
           <div class="nav-1">
@@ -28,9 +29,7 @@
       </div>
     </div>
   </header>
-  <div style="height:60px">
-  </div>
-  <section class="why-html?">
+  <!-- <section class="why-html?">
     <table>
       <tr>
         <td>
@@ -79,7 +78,58 @@
         </td>
       </tr>
     </table>
-  </section>
+  </section> -->
+  <div class="why-html">
+    <div class="app">
+      <img src="Images/app.png" alt="App">
+    </div>
+    <div class="paragraph">
+      <h1 class="home-h">Why HTML?</h1>
+      <hr>
+      <b>HTML</b> (Following Paragraph is Left Aligned)
+      <hr>
+      <p class="p-html">
+        HTML is responsible of giving a semantic meaning for your content.
+        <br>
+        For example:
+      <ol>
+        <li>Here is <span class="tags">&lt;h5&gt;</span><span><b>title</b></span><span class="tags">&lt;/h5&gt;</span>
+        </li>
+        <li>Followed by a <span class="tags">&lt;p&gt;</span> paragraph <span class="tags">&lt;/p&gt;</span></li>
+        <li>Then there's a footer [etc].</li>
+      </ol>
+      Web browsers read it to display your content according to their importance (a title is bigger than a text, a
+      <span class="tags">&lt;strong&gt;</span> <strong>"strong"</strong> <span class="tags">&lt;/strong&gt;</span> text
+      is
+      more important than a single text, etc). &lt;tt&gt; <tt>Crawlers</tt>
+      &lt;/tt&gt; (like robots) use it to identify what content is relevant to their activity (i.e. google needs your
+      page
+      title to show it on his page).
+      </p>
+      <hr>
+      CSS (Following Paragraph is Justified)
+      <hr>
+      <p class="p-css">
+        CSS gives a style to your application. It's fundamentally destined to the user. It allows to say <span
+          class="p-red">"This text is red"</span>, <span class="p-block tags">"this block is 200px wide"</span> , etc.
+        it's "basically" not
+        used by crawlers
+        but
+        it has some importance (some robot avoid to render a text if it's hidden for example)
+      </p>
+
+      <hr>
+      <tt>Javascript</tt> (Following Paragraph is Right Aligned)
+      <div class="js">
+        <p class="p-js">
+          <hr>
+          Javascript which is the only Programming language of these 3, allows to perform actions in real time (like
+          showing
+          a dialog when the user click a button).
+        </p>
+      </div>
+    </div>
+  </div>
   <section>
     <form action="" class="form">
       <div class="form-caption">
