--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 
 <head>
   <meta charset="utf-8">
@@ -29,64 +29,16 @@
       </div>
     </div>
   </header>
-  <!-- <section class="why-html?">
-    <table>
-      <tr>
-        <td>
-          <img src="Images/app.png" alt="App" class="app">
-        </td>
-        <td>
-          <div class="paragraph">
-            <h1 class="home-h">Why HTML?</h1>
-            <p>
-              <hr>
-              <b>HTML</b> (Following Paragraph is Left Aligned)
-              <hr>
-            <p class="p-html">
-              HTML is responsible of giving a semantic meaning for your content.
-              <br>
-              For example:
-            <ol>
-              <li>Here is <span class="tags">&lt;h5&gt;</span><span><b>title</b></span><span class="tags">&lt;/h5&gt;</span></li>
-              <li>Followed by a <span class="tags">&lt;p&gt;</span> paragraph <span class="tags">&lt;/p&gt;</span></li>
-              <li>Then there's a footer [etc].</li>
-            </ol>
-            Web browsers read it to display your content according to their importance (a title is bigger than a text, a
-            <span class="tags">&lt;strong&gt;</span> <strong>"strong"</strong> <span class="tags">&lt;/strong&gt;</span> text is more important than a single text, etc). &lt;tt&gt; <tt>Crawlers</tt>
-            &lt;/tt&gt; (like robots) use it to identify what content is relevant to their activity (i.e. google needs your page
-            title to show it on his page).
-            </p>
-            <hr>
-            CSS (Following Paragraph is Justified)
-            <hr>
-            <p class="p-css">
-              CSS gives a style to your application. It's fundamentally destined to the user. It allows to say <span class="p-red">"This text is red"</span>, <span class="p-block tags">"this block is 200px wide"</span> , etc. it's "basically" not
-              used by crawlers
-              but
-              it has some importance (some robot avoid to render a text if it's hidden for example)
-            </p>
-            <p class="p-js">
-              <hr>
-              <tt>Javascript</tt> (Following Paragraph is Right Aligned)
-            <div class="js">
-              <hr>
-              Javascript which is the only Programming language of these 3, allows to perform actions in real time (like showing a dialog when the user click a button).
-            </div>
-            </p>
-            </p>
-          </div>
-        </td>
-      </tr>
-    </table>
-  </section> -->
   <div class="why-html">
     <div class="app">
       <img src="Images/app.png" alt="App">
     </div>
     <div class="paragraph">
+
       <h1 class="home-h">Why HTML?</h1>
+
       <hr>
-      <b>HTML</b> (Following Paragraph is Left Aligned)
+      <tt>HTML</tt> (Following Paragraph is Left Aligned)
       <hr>
       <p class="p-html">
         HTML is responsible of giving a semantic meaning for your content.
@@ -106,8 +58,9 @@
       page
       title to show it on his page).
       </p>
+
       <hr>
-      CSS (Following Paragraph is Justified)
+      <tt>CSS</tt> (Following Paragraph is Justified)
       <hr>
       <p class="p-css">
         CSS gives a style to your application. It's fundamentally destined to the user. It allows to say <span
@@ -120,14 +73,12 @@
 
       <hr>
       <tt>Javascript</tt> (Following Paragraph is Right Aligned)
-      <div class="js">
-        <p class="p-js">
-          <hr>
+      <hr>
+      <p class="p-js">
           Javascript which is the only Programming language of these 3, allows to perform actions in real time (like
           showing
           a dialog when the user click a button).
         </p>
-      </div>
     </div>
   </div>
   <section>
