--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -44,20 +44,27 @@
         HTML is responsible of giving a semantic meaning for your content.
         <br>
         For example:
+      </p>
       <ol>
-        <li>Here is <span class="tags">&lt;h5&gt;</span><span><b>title</b></span><span class="tags">&lt;/h5&gt;</span>
+        <li>Here is <span class="tags">&lt;h5&gt;</span>
+          <h5>title</h5> <span class="tags">&lt;/h5&gt;</span>
         </li>
         <li>Followed by a <span class="tags">&lt;p&gt;</span> paragraph <span class="tags">&lt;/p&gt;</span></li>
         <li>Then there's a footer [etc].</li>
       </ol>
-      Web browsers read it to display your content according to their importance (a title is bigger than a text, a
-      <span class="tags">&lt;strong&gt;</span> <strong>"strong"</strong> <span class="tags">&lt;/strong&gt;</span> text
-      is
-      more important than a single text, etc). &lt;tt&gt; <tt>Crawlers</tt>
-      &lt;/tt&gt; (like robots) use it to identify what content is relevant to their activity (i.e. google needs your
-      page
-      title to show it on his page).
+      <p class="p-html">
+        Web browsers read it to display your content according to their importance (a title is bigger than a text, a
+        <span class="tags">&lt;strong&gt;</span> <strong>"strong"</strong> <span class="tags">&lt;/strong&gt;</span>
+        text
+        is
+        more important than a single text, etc). <span class="tags">&lt;tt&gt;</span><tt>Crawlers</tt>
+        <span class="tags">&lt;/tt&gt;</span> (like robots) use it to identify what content is relevant to their
+        activity (i.e. google needs your
+        page
+        title to show it on his page).
       </p>
+
+
 
       <hr>
       <tt>CSS</tt> (Following Paragraph is Justified)
@@ -75,10 +82,10 @@
       <tt>Javascript</tt> (Following Paragraph is Right Aligned)
       <hr>
       <p class="p-js">
-          Javascript which is the only Programming language of these 3, allows to perform actions in real time (like
-          showing
-          a dialog when the user click a button).
-        </p>
+        Javascript which is the only Programming language of these 3, allows to perform actions in real time (like
+        showing
+        a dialog when the user click a button).
+      </p>
     </div>
   </div>
   <section>
@@ -108,10 +115,10 @@
       <select name="year" id="year" required>
         <span class="slct">
           <option selected value="1" class="slct-0" disabled>Select from list</option>
-          <option value="1" class="slct-1">1</option>
-          <option value="2" class="slct-2">2</option>
-          <option value="3" class="slct-3">3</option>
-          <option value="4" class="slct-4">4</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
         </span>
       </select>
       <br>
@@ -140,3 +147,5 @@
     <br>
   </section>
 </body>
+
+</html>
