made page one content resizable

--- a/task01/index.html
+++ b/task01/index.html
@@ -12,7 +12,8 @@
 <body class="Roboto-font">
   <header>
     <div>
-      <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png" alt="reidcon logo"></a>
+      <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png"
+          alt="reidcon logo"></a>
       <div class="navbar">
         <ul class="nav-list">
           <div class="nav-1">
@@ -29,7 +30,7 @@
       </div>
     </div>
   </header>
-  <section class="intro">
+  <!-- <section class="intro">
     <table>
       <tr>
         <td>
@@ -56,7 +57,29 @@
         </td>
       </tr>
     </table>
-  </section>
+  </section> -->
+  <div class="intro">
+    <div class="home-p">
+      <p>
+        <span class="home-h">HOME</span>
+        <br>
+        <br>
+        HTML markup consists of several key components, including those called tags (and their attributes),
+        character-based data types, character refernce and entity refernces. HTML tags most commonly come in
+        pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span
+          class="tags"><tt><b>&lt;/h1&gt;</b></tt></span>, although some
+        recondesent empty elements and so are unpaired, for example <span
+          class="tags"><tt><b>&lt;img&gt;</b></tt></span>. The
+        first tag in such a pair is the start tag, and the second is the end tag (they are also called
+        <i>opening tags</i> and <i>closing tags</i>).
+        <br>
+        <a href="whyhtml.html"><button type="button" class="wh-button"><strong>Why HTML?</strong></button></a>
+      </p>
+    </div>
+    <div class="hero">
+      <img src="Images/hero.jpg" alt="hero">
+    </div>
+  </div>
   <section class="table">
     <br>
     <br>
