--- a/task01/index.html
+++ b/task01/index.html
@@ -81,74 +81,76 @@
     </div>
   </div>
   <section class="table">
-    <br>
-    <br>
-    <table align="center" class="timetable">
-      <caption>
-        <div>
-          <p>
+    <div>
+      
+
+      <table class="timetable">
+        <caption>
           <div class="sample-table">
             Sample Table
           </div>
+          
           <div class="t-description">
-            Following table uses <span class="tags"><tt>colspan</tt></span> and <span
-              class="tags"><tt>rowspan</tt></span> attributes inside <span
-              class="tags"><tt>&lt;<b>td</b>&gt;</tt></span> to
+            Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span>
+            attributes inside <span class="tags"><tt>&lt;td&gt;</tt></span> to
             merge two or more cells
           </div>
-          <br>
-          </p>
-        </div>
-      </caption>
-      <tr>
-        <th class="th-1"></th>
-        <th class="th-2" align="left"> First Year</th>
-        <th class="th-3" align=left> Second Year</th>
-        <th class="th-4" align=left> Third Year</th>
-        <th class="th-5" align=left> Fourth Year</th>
-      </tr>
-      <tr class="tr-1 row">
-        <td class="t-data">8.00 a.m - 10.00 a.m</td>
-        <td class="t-data">Data Structures & Algorithms</td>
-        <td class="t-data">Software Engineering</td>
-        <td class="t-data">Mobile Application Development</td>
-        <td class="t-data">Parallel Computing</td>
-      </tr>
-      <tr class="tr-2 row">
-        <td class="t-data">10.00 a.m - 12.00 a.m</td>
-        <td class="t-data">Database</td>
-        <td class="t-data">Functional Programming</td>
-        <td class="t-data">Machine Learning</td>
-        <td class="t-data">Computational Biology</td>
-      </tr>
-      <tr class="tr-3 row">
-        <td class="t-data"><b>12.00 a.m - 1.00 p.m</b></td>
-        <td colspan="4">
-          <div class="interval">
-            <b>Interval</b>
-          </div>
-        </td>
-      </tr>
-      <tr class="tr-4 row">
-        <td class="t-data">1.00 p.m - 3.00 p.m</td>
-        <td class="t-data">Mathematics</td>
-        <td rowspan="2" class="t-data-l">
-          Group Project
-          <ul>
-            <li>Previous Progress</li>
-            <li>Plan for next week</li>
-          </ul>
-        </td>
-        <td class="t-data">Game Development</td>
-        <td class="t-data">Cognitive Robotics</td>
-      </tr>
-      <tr class="tr-5 row">
-        <td class="t-data">3.00 p.m - 5.00 p.m</td>
-        <td class="t-data">Programming Using C</td>
-        <td class="t-data">Management</td>
-        <td class="t-data">Philosophy of Science</td>
-      </tr>
-    </table>
+  
+        </caption>
+        <thead>
+          <tr>
+            <th></th>
+            <th> First Year</th>
+            <th> Second Year</th>
+            <th> Third Year</th>
+            <th> Fourth Year</th>
+          </tr>
+        </thead>
+
+        <tr>
+          <td>8.00 a.m - 10.00 a.m</td>
+          <td>Data Structures & Algorithms</td>
+          <td>Software Engineering</td>
+          <td>Mobile Application Development</td>
+          <td>Parallel Computing</td>
+        </tr>
+
+        <tr>
+          <td>10.00 a.m - 12.00 a.m</td>
+          <td>Database</td>
+          <td>Functional Programming</td>
+          <td>Machine Learning</td>
+          <td>Computational Biology</td>
+        </tr>
+
+        <tr class="active-row">
+          <td>12.00 a.m - 1.00 p.m</td>
+          <td colspan="4" class="interval">Interval</td>
+        </tr>
+
+        <tr>
+          <td>1.00 p.m - 3.00 p.m</td>
+          <td>Mathematics</td>
+          <td rowspan="2" class="tableData-l">
+            Group Project
+            <ul>
+              <li>Previous Progress</li>
+              <li>Plan for next week</li>
+            </ul>
+          </td>
+          <td>Game Development</td>
+          <td>Cognitive Robotics</td>
+          </tr>
+
+          <tr>
+            <td>3.00 p.m - 5.00 p.m</td>
+            <td>Programming Using C</td>
+            <td>Management</td>
+            <td>Philosophy of Science</td>
+          </tr>
+
+          </tr:nth-child>
+      </table>
     </div>
   </section>
 </body>
