Fixed form alignment

--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -88,8 +88,8 @@
       </p>
     </div>
   </div>
-  <section>
-    <form action="" class="form">
+  <section class="form">
+    <form action="">
       <div class="form-caption">
         Sample Form
       </div>
