--- a/task01/index.html
+++ b/task01/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </header>
-  
+
   <div class="intro">
     <div class="home-p">
       <p>
@@ -55,21 +55,18 @@
   </div>
   <section class="table">
     <div>
-      
-
       <table class="timetable">
         <caption>
           <div class="sample-table">
             Sample Table
           </div>
-          
           <div class="t-description">
             Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span>
             attributes inside <span class="tags"><tt>&lt;td&gt;</tt></span> to
             merge two or more cells
           </div>
-  
         </caption>
+        <div class="space"></div>
         <thead>
           <tr>
             <th></th>
