--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -113,8 +113,8 @@
       <br>
       <label for="year">Academic Year:</label>
       <select name="year" id="year" required>
-        <span class="slct">
-          <option selected value="1" class="slct-0" disabled>Select from list</option>
+        <span>
+          <option selected value="1" disabled>Select from list</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -134,7 +134,7 @@
       </span>
       <br>
       <br>
-      <div class="tetxarea">
+      <div>
         <div class="col-1">
           <label for="feedback">Comment:</label>
         </div>
