Fixed submit button

--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -144,7 +144,7 @@
       </div>
       <br>
       <div class="s-r">
-        <input type="sumbit" name="Submit" class="submit" value="Submit">
+        <input type="submit" name="Submit" class="submit" value="Submit">
         <input type="reset" name="Reset" class="reset" value="Reset">
       </div>
     </form>
