--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -17,12 +17,12 @@
         <ul class="nav-list">
           <div class="nav-1">
             <li>
-              <a href="whyhtml.html" class="html"><b>WHY HTML?</b></a>
+              <a href="whyhtml.html" class="html" title="Why Html?"><b>WHY HTML?</b></a>
             </li>
           </div>
           <div class="nav-2">
             <li>
-              <a href="index.html" class="home"><b>HOME</b></a>
+              <a href="index.html" class="home" title="Home"><b>HOME</b></a>
             </li>
           </div>
         </ul>
